--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ subprojects {
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         }
+        runtimeOnly 'com.h2database:h2'
     }
 
     test {
