--- a/gumrya-core/build.gradle
+++ b/gumrya-core/build.gradle
@@ -1,2 +1,7 @@
 bootJar { enabled = false }
 jar { enabled = true }
+
+dependencies {
+    implementation project(path:':gumrya-common', configuration: 'default')
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+}
