--- a/gumrya-web/build.gradle
+++ b/gumrya-web/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+    compile project(path:':gumrya-core', configuration: 'default')
     implementation project(path:':gumrya-common', configuration: 'default')
     implementation 'org.springframework.boot:spring-boot-starter-web'
 }
