--- a/gumrya-web/build.gradle
+++ b/gumrya-web/build.gradle
@@ -1,3 +1,5 @@
+version = '0.0.1'
+
 dependencies {
     compile project(path:':gumrya-core', configuration: 'default')
     implementation project(path:':gumrya-common', configuration: 'default')
