--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,14 @@
-buildscript {
-    ext {
-        springBootVersion = '2.3.12.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-        maven { url "https://plugins.gradle.org/m2/" }
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath "io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE"
-        classpath "org.asciidoctor:asciidoctor-gradle-plugin:1.5.9.2"
-    }
+plugins {
+    id 'org.springframework.boot' version '2.3.12.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id "org.asciidoctor.convert" version "1.5.9.2"
+    id 'java'
 }
+
+repositories {
+    mavenCentral()
+}
+
 subprojects {
     group 'org.gumrya'
 
@@ -31,7 +28,6 @@ subprojects {
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         }
-        runtimeOnly 'com.h2database:h2:1.4.200'
     }
 
     test {
@@ -44,6 +40,7 @@ subprojects {
         }
     }
 }
+
 def asciidoctorConfigure = [project(':gumrya-web')]
 configure(asciidoctorConfigure){
     apply plugin: "org.asciidoctor.convert"
@@ -75,6 +72,3 @@ configure(asciidoctorConfigure){
     }
 }
 
-project(':gumrya-common')
-project(':gumrya-admin')
-project(':gumrya-core')
