--- a/gumrya-core/build.gradle
+++ b/gumrya-core/build.gradle
@@ -4,4 +4,5 @@ jar { enabled = true }
 dependencies {
     implementation project(path:':gumrya-common', configuration: 'default')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'com.h2database:h2:1.4.200'
 }
